Refactor Resume Dto's